Moving clinician docs to an unlisted folder, as these will be covered in researcher docs or will not be needed soon. Fixed text sizes on mobile and added alt text for PCGL logo.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -83,7 +83,7 @@
       font-size: 1.75rem;
     }
     .hero__subtitle {
-      font-size: 2.5rem;
+      font-size: 2.25rem;
     }
   }
 }
